fixed header and menu alignment issues

--- a/client/sass/globals/_components.scss
+++ b/client/sass/globals/_components.scss
@@ -63,7 +63,7 @@ form {
 }
 
 label {
-    @include typeBody;
+    @include typeBodySmallCaps;
 }
 
 @mixin placeHolderOverride {
@@ -268,6 +268,10 @@ ul.menu {
         }
     }
     
+    section { 
+        padding-bottom: $leading;
+    }
+    
     li {
         position: relative;
         height: $leading;
@@ -276,10 +280,9 @@ ul.menu {
                                      transform,
                              -webkit-transform,
                                 -moz-transform);
+                                
         &.heading {
-            @include typeBody;
-            text-transform: lowercase;
-            padding-top: $leading;
+            @include typeBodySmallCaps;
         }
         
         &.inputText {
