--- a/client/sass/layout/_home.scss
+++ b/client/sass/layout/_home.scss
@@ -22,7 +22,7 @@ body {
             h1.headerSpaceName {
                 @include typeHeaderSmallCaps;
                 position: absolute;
-                top: 4pt;
+                top: 9pt;
                 width: 33.333333vw;
                 left: 50vw;
                 margin-left: -16.6666667vw;
